# databases_project

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  compile.sh  compile_nocmake.sh  copy_and_zip.sh  flake.nix
.github/workflows/: benchmark_ci.yml  ci.yml  ci_compile_nocmake.yml  ci_nix_build_test.yml
benchmarks/: bench.py  bench_check.py  execute_part.py  produce_report_table.py
docs/: ProjectReport_1075201.typ  design_notes.typ
docs/img/: data_tuple.mermaid  database.mermaid  deadlock.mermaid  group_relation.mermaid  lock_hierarchy.mermaid  produce_svgs.py  stage.mermaid  transaction.mermaid
source/: ConflictGraph.hpp  DataTuple.hpp  Database.cpp  Database.hpp  DeadlockDetector.cpp  DeadlockDetector.hpp  Group.hpp  IndexingHashMap.hpp  Lock.hpp  OpenAddrHashMap.hpp  OpenAddrHashSet.hpp  OpenAddressingHashMap.hpp  OpenAddressingPointerSet.hpp  Relation.cpp  Relation.hpp  SLock.hpp  StableVector.hpp  Stage.cpp  Stage.hpp  Transaction.cpp  Transaction.hpp  XSLock.hpp  common.hpp  csv_parsing_functions.cpp  csv_parsing_functions.hpp  hashtable_utils.hpp  main.cpp  parsing_functions.cpp  parsing_functions.hpp
src/: main.cpp
tests/: run_tests.py  simulator.py
tests/interactions/: add_add_interact  add_then_delete  adding_tuples  adhoc  diagonal  group_iterator_resume_after_writer_commit  hash_linear_probe_tombstone  no_self_deadlock  no_transaction  query  query_const_const  query_cross_product  query_dead_tuples  query_easy  query_extensive  query_group_filter_resume_after_suspend  query_join_right  query_relation_filter  (+6 more)
(+42 files in other folders)
